--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "zentao-mcp",
   "version": "1.0.0",
-  "description": "禅道 MCP 服务器 - 通过账号密码获取token并查询需求、bug、任务等内容",
+  "description": "禅道 MCP 服务器 - 通过cookie认证并查询需求、bug、任务等内容",
   "type": "module",
   "main": "src/index.js",
+  "bin": {
+    "zentao-mcp": "./src/index.js"
+  },
   "scripts": {
     "start": "node src/index.js"
   },
@@ -15,8 +18,15 @@
   ],
   "author": "",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "xlsx": "^0.18.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
-
