--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/yuunie/zentao-mcp.git"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
